# OCR-tool

./: .gitignore  README.md  ocr.py  pyproject.toml
